--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,13 +12,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activitys.MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+        <activity android:name=".Activitys.LoginActivity" >
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
         </activity>
+        <activity android:name=".Activitys.GincanaActivity"></activity>
+        <activity android:name=".Activitys.CadastroUsuarioActivity" />
+        <activity android:name=".Activitys.CadastroCompeticaoActivity" />
+        <activity android:name=".Activitys.SemiFinalActivity" />
+        <activity android:name=".Activitys.AdcionarEquipeActivity" />
+        <activity android:name=".Activitys.MainActivity"/>
     </application>
 
 </manifest>
